Habilidades/Magias, equipamento, raça e classe